--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 ﻿################################################################################
 # This .gitignore file was automatically created by Microsoft(R) Visual Studio.
 ################################################################################
-
-/WPFNLSSample/obj
+.vs
+*.user
+obj
+bin
